returning list of TokenTransferList objects for all transfer precompiles
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>